# Jobseek

./: .cursorrules  .gitignore  CLERK_SETUP.md  README.md  restart_backend.sh  start-dev.sh
be/: .env.backup  env.example  main.py  pyproject.toml  seed.py
be/app/api/: interviews.py  jobs.py  main.py  session_auth.py
be/app/core/: clerk_auth.py  config.py  csrf.py  database.py  session_auth.py
be/app/models/: job.py  user.py
be/prisma/: schema.prisma
fe/: env.example  package-lock.json  package.json
fe/src/: App.css  App.test.tsx  App.tsx
fe/src/components/: ApplicationStepContent.tsx  ApplicationStepper.tsx  AuthInitializer.tsx  JobApplicationModal.tsx  JobPostingForm.tsx
fe/src/hooks/: useAuth.ts  useProfile.ts
fe/src/pages/: ApplicationHistory.tsx  ApplicationsManagement.tsx  ClerkLoginPage.tsx  DebugProfile.tsx  EmployerDashboard.tsx  EmployerSignIn.tsx  EmployerSignUp.tsx  HomePage.tsx  JobApplicationPage.tsx  JobDetailsPage.tsx  JobListingPage.tsx  JobPostingsManagement.tsx  JobSeekerDashboard.tsx  JobSeekerSignIn.tsx  JobSeekerSignUp.tsx  ProfileSetup.tsx  ProfileView.tsx
fe/src/services/: api.ts  clerk.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  task-list.md  techContext.md
